# rbx-dom

./: Cargo.toml
.cargo/: config.toml
rbx_binary/: ARCHITECTURE.md  Cargo.toml
rbx_binary/benches/suite/: util.rs
rbx_binary/src/: chunk.rs  core.rs  decompression_host.rs  file.rs  header.rs  lib.rs  text_deserializer.rs  types.rs
rbx_binary/src/deserializer/: chunks.rs  error.rs  file.rs  header.rs  mod.rs  rayon.rs  rayon_drainproducer.rs  rayon_transpose.rs  state.rs
rbx_binary/src/serializer/: borrowed_variant_vec.rs  error.rs  mod.rs  prop.rs  state.rs
rbx_binary/src/strong/: deserializer.rs
rbx_binary/src/tests/: core_read_write.rs  serializer.rs  util.rs
rbx_binary/src/weak/: mod.rs
rbx_binary/src/weak/deserializer/: error.rs  state.rs
rbx_binary/src/weak/serializer/: error.rs  mod.rs  state.rs
rbx_binary/src/weak/tests/: serializer.rs  util.rs
rbx_binary/src/weak/tests/snapshots/: rbx_binary__weak__tests__serializer__default_shared_string.snap  rbx_binary__weak__tests__serializer__does_not_serialize.snap  rbx_binary__weak__tests__serializer__just_folder.snap  rbx_binary__weak__tests__serializer__logical_properties_basepart_size.snap  rbx_binary__weak__tests__serializer__migrated_properties.snap  rbx_binary__weak__tests__serializer__part_color.snap  rbx_binary__weak__tests__serializer__partially_present.snap  rbx_binary__weak__tests__serializer__unknown_property.snap  rbx_binary__weak__tests__util__attributes__decoded.snap  rbx_binary__weak__tests__util__attributes__encoded.snap  rbx_binary__weak__tests__util__attributes__input.snap  rbx_binary__weak__tests__util__axes__decoded.snap  rbx_binary__weak__tests__util__axes__encoded.snap  rbx_binary__weak__tests__util__axes__input.snap  rbx_binary__weak__tests__util__baseplate-566__decoded.snap  rbx_binary__weak__tests__util__baseplate-566__encoded.snap  rbx_binary__weak__tests__util__baseplate-566__input.snap  rbx_binary__weak__tests__util__bloomeffect__decoded.snap  rbx_binary__weak__tests__util__bloomeffect__encoded.snap  rbx_binary__weak__tests__util__bloomeffect__input.snap  rbx_binary__weak__tests__util__content-mixed__decoded.snap  (+128 more)
rbx_binary_core/src/: chunk.rs
rbx_binary_strong/: ARCHITECTURE.md  Cargo.toml  README.md
rbx_binary_strong/src/deserializer/: error.rs  mod.rs  state.rs
rbx_classes/: Cargo.toml
rbx_classes/src/: enums.rs  instances.rs  lib.rs  macros.rs
rbx_dom_strong/: Cargo.toml
rbx_dom_strong/src/: class.rs  dom.rs  instance.rs  instances.rs  lib.rs  macros.rs  test.rs
rbx_dom_weak/: Cargo.toml
rbx_dom_weak/benches/suite/: main.rs
rbx_dom_weak/src/: dom.rs  instance.rs  lib.rs  viewer.rs
rbx_reflection/: Cargo.toml
rbx_reflection/src/: database.rs  interner.rs  lib.rs  migration.rs  serde_util.rs
rbx_reflection_database/: Cargo.toml  database.msgpack
rbx_reflection_database/src/: lib.rs
rbx_reflector/: Cargo.toml
rbx_reflector/src/: defaults.rs  patches.rs
rbx_reflector/src/cli/: codegen_strong.rs  defaults_place.rs  generate.rs  mod.rs
rbx_types/: Cargo.toml
rbx_types/src/: basic_types.rs  binary_string.rs  material_colors.rs  referent.rs  shared_string.rs  tags.rs  variant.rs
rbx_types/src/attributes/: error.rs  reader.rs
rbx_types/src/terrain/: mod.rs  smooth_grid.rs
rbx_types_strong/: Cargo.toml
rbx_types_strong/src/: enums.rs  instances.rs  lib.rs  macros.rs  traits.rs
rbx_util/: Cargo.toml
rbx_util/src/: convert.rs  remove_prop.rs  view_binary.rs
rbx_xml/: Cargo.toml
rbx_xml/src/: conversion.rs  core.rs  deserializer.rs  lib.rs  serializer.rs  serializer_core.rs
rbx_xml/src/tests/: basic.rs  formatting.rs  mod.rs
rbx_xml/src/types/: attributes.rs  material_colors.rs  mod.rs  net_asset_ref.rs  referent.rs  shared_string.rs
