[workspace]
resolver = "2"
members = [
	"rbx_binary",
	"rbx_dom_weak",
	"rbx_reflector",
	"rbx_reflection",
	"rbx_reflection_database",
	"rbx_types",
	"rbx_xml",
	"rbx_util",
]

[workspace.lints.rust]
# unsafe_code = "forbid"
# missing_docs = "warn"
# missing_debug_implementations = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# variant_size_differences = "warn"
unexpected_cfgs = "warn"
