[package]
name = "rbx_binary_strong"
description = "Strongly typed implementation of Roblox's binary model (rbxm) and place (rbxl) file formats"
version = "0.1.0"
license = "MIT"
documentation = "https://docs.rs/rbx_binary_strong"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = [
    "Lucien Greathouse <me@lpghatguy.com>",
    "Micah Reid <git@dekkonot.com>",
    "Ken Loeffler <kenloef@gmail.com>",
]
edition = "2024"

[features]
rayon = ["dep:rayon"]

[dependencies]
rbx_binary_core = { version = "0.1.0", path = "../rbx_binary_core" }
rbx_dom_strong = { version = "0.1.0", path = "../rbx_dom_strong" }

lz4_flex = "0.13.1"
rayon = { version = "1.12.0", optional = true }
thiserror = "2.0.18"
zstd = "0.13.2"
