[package]
name = "rbx_classes"
version = "0.700.0"
description = "Instances and Enums used to represent Roblox values"
license = "MIT"
documentation = "https://docs.rs/rbx_classes"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = [
    "Lucien Greathouse <me@lpghatguy.com>",
    "Micah Reid <git@dekkonot.com>",
    "Ken Loeffler <kenloef@gmail.com>",
]
edition = "2018"

[dependencies]
rbx_types = { version = "3.1.0", path = "../rbx_types", features = ["serde"] }
