[package]
name = "rbx_dom_strong"
version = "0.1.0"
description = "Strongly-typed Roblox DOM implementation for Rust"
license = "MIT"
documentation = "https://docs.rs/rbx_dom_strong"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[dependencies]
rbx_types = { version = "2.0.0", path = "../rbx_types", features = ["serde"] }

ahash = "0.8.11"
serde = "1.0.137"
