[package]
name = "rbx_types_strong"
version = "0.1.0"
description = "Instances and Enums used to represent Roblox values"
license = "MIT"
documentation = "https://docs.rs/rbx_types_strong"
homepage = "https://github.com/rojo-rbx/rbx-dom"
repository = "https://github.com/rojo-rbx/rbx-dom.git"
readme = "README.md"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[dependencies]
rbx_types = { version = "2.0.0", path = "../rbx_types", features = ["serde"] }
